<resources>
    <string name="app_name">QuizApp</string>
    <string name="new_game">Quiz</string>
    <string name="database">Database</string>
    <string name="add">Add</string>
    <string name="headline_quiz">Quizname</string>
    <string name="quiztext">Quiz functionality here</string>
    <string name="addtext">Add functionality here</string>
    <string name="databasetext">Database functionality here</string>
    <string name="submitButton">Start</string>
    <string name="option3">Option 3</string>
    <string name="option1">Option 1</string>
    <string name="option2">Option 2</string>
    <string name="Score">0</string>
    <string name="who">Who is this?</string>
    <string name="saveButton">Save</string>
    <string name="add_word">Add word!</string>
    <string name="empty_not_saved">Question not saved because it is empty.</string>
    <string name="hint_word">Who is this?</string>
    <string name="imageTest">ImageTest</string>
    <string name="deleteButton">Delete All</string>
</resources>