<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizActivity">

    <TextView
        android:id="@+id/twScoreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="Score:"
        android:textSize="28sp"
        app:layout_constraintEnd_toStartOf="@+id/twScore"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/twScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="0"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/window_bg"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/twScoreText"
        tools:layout_editor_absoluteX="16dp">

        <TextView
            android:id="@+id/twQuestion"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:text="@string/who"
            android:textSize="34sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="16dp"
            app:contentDescription="Quiz image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/twOption1"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/default_option_border_bg"
            android:gravity="center"
            android:onClick="onClickOpt1"
            android:padding="15dp"
            android:text="@string/option1"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/twOption2"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/default_option_border_bg"
            android:gravity="center"
            android:onClick="onCLickOpt2"
            android:padding="15dp"
            android:text="@string/option2"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/twOption3"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/default_option_border_bg"
            android:gravity="center"
            android:onClick="onClickOpt3"
            android:padding="15dp"
            android:text="@string/option3"
            android:textSize="24sp" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/blue_yonder"
            android:onClick="onClickSub"
            android:text="@string/submitButton"
            android:textSize="24sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>